[gd_scene load_steps=4 format=3 uid="uid://cwfpw16sb0fu5"]

[ext_resource type="Script" path="res://scripts/game/UI.gd" id="1_r8c80"]
[ext_resource type="Texture2D" uid="uid://cxswbsf5byuy1" path="res://icon.svg" id="3_p6nkt"]

[sub_resource type="LabelSettings" id="LabelSettings_t7fj5"]
font_size = 10

[node name="UI" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 0
offset_left = 16.0
offset_top = 16.0
offset_right = 752.0
offset_bottom = 416.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_r8c80")

[node name="Pause" type="Button" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -35.5
offset_right = 35.5
offset_bottom = 40.0
grow_horizontal = 2
text = "Pause"

[node name="Pause Screen" type="Control" parent="."]
visible = false
layout_mode = 1
anchor_left = -0.022
anchor_top = -0.04
anchor_right = 1.022
anchor_bottom = 1.04
offset_left = 0.192001
offset_right = -0.192078
offset_bottom = -3.05176e-05

[node name="ColorRect" type="ColorRect" parent="Pause Screen"]
layout_mode = 2
offset_right = 768.0
offset_bottom = 432.0
color = Color(0, 0, 0, 0.490196)

[node name="VBoxContainer" type="VBoxContainer" parent="Pause Screen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -61.5
offset_top = -58.5
offset_right = 61.5
offset_bottom = 58.5
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Label" type="Label" parent="Pause Screen/VBoxContainer"]
layout_mode = 2
text = "Game is paused"

[node name="Control" type="Control" parent="Pause Screen/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Pause Screen/VBoxContainer"]
layout_mode = 2

[node name="Resume" type="Button" parent="Pause Screen/VBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Resume"

[node name="Quit" type="Button" parent="Pause Screen/VBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Quit"

[node name="debug stuff" type="Label" parent="."]
layout_mode = 0
offset_top = 63.0
offset_right = 128.0
offset_bottom = 255.0
text = "label here"
label_settings = SubResource("LabelSettings_t7fj5")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
offset_right = 96.0
offset_bottom = 32.0

[node name="TextureRect" type="TextureRect" parent="HBoxContainer"]
layout_mode = 2
texture = ExtResource("3_p6nkt")
expand_mode = 2

[node name="Gap" type="Control" parent="HBoxContainer"]
custom_minimum_size = Vector2(5, 0)
layout_mode = 2

[node name="Moon Info" type="Label" parent="HBoxContainer"]
layout_mode = 2

[node name="Time Left" type="Label" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -200.0
offset_right = -120.0
offset_bottom = 23.0
grow_horizontal = 0
text = "Time Left:"

[node name="Time" type="Label" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -88.0
offset_bottom = 23.0
grow_horizontal = 0

[node name="Transition" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -16.0
offset_top = -16.0
offset_right = 16.0
offset_bottom = 16.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="b win" type="Button" parent="."]
layout_mode = 0
offset_left = 688.0
offset_top = 240.0
offset_right = 712.0
offset_bottom = 264.0
text = "b"

[node name="r win" type="Button" parent="."]
layout_mode = 0
offset_left = 688.0
offset_top = 288.0
offset_right = 713.0
offset_bottom = 319.0
text = "r"

[connection signal="button_up" from="Pause" to="." method="_on_pause_button_up"]
[connection signal="button_up" from="Pause Screen/VBoxContainer/VBoxContainer/Resume" to="." method="_on_resume_button_up"]
[connection signal="button_up" from="Pause Screen/VBoxContainer/VBoxContainer/Quit" to="." method="_on_quit_button_up"]
[connection signal="button_up" from="b win" to="." method="_on_b_win_button_up"]
[connection signal="button_up" from="r win" to="." method="_on_r_win_button_up"]
